--- a/09.html
+++ b/09.html
@@ -8,12 +8,25 @@
     <style>
         div {
             width: 250px;
-            height: 70px;
+            height: 170px;
             background-color: lightblue;
             padding: 50px;
             margin: 100px;            
             overflow: auto;
             /* hidden scroll auto */
+            border: 7px double white;
+            /* 두께(굵기) 선의종류(solid dotted dashed double) 색상 */
+        }
+    <style>
+        t2 {
+            width: 200px;
+            height: 200px;
+            margin-left: 50px;
+            margin-right: 50px;
+            /* margin: 0 50px 0 50px; */
+            padding:  0 20px 0 20px;
+            border:  5px dotted blue;
+            /* 두께(굵기) 선의종류(solid dotted dashed double) 색상 */
         }
     </style>
 </head>
