--- a/11.html
+++ b/11.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .box {
-            border-width: 30px;
-            border-style: ridge;
-            border-color: aqua;
+        .box1 {
             width: 500px;
             height: 70px;
-            padding: 20px;
+            border: 7px dashed aqua;
+            padding: 30px;
+            border-radius: 50px 40px 30px 20px;
         }
     </style>
 </head>
 <body>
-    <div class="box">
+    <div class="box1">
         <h2>Lorem ipsum dolor sit amet</h2>
     </div>
 </body>
