--- a/11.html
+++ b/11.html
@@ -9,7 +9,7 @@
         .box1 {
             width: 500px;
             height: 70px;
-            border: 7px dashed aqua;
+            border: 10px dotted aqua;
             padding: 30px;
             border-radius: 50px 40px 30px 20px;
         }
